# mari-cli

./: .gitignore  PITCH.md  PRODUCT.md  README.md  STYLE.md  package-lock.json  package.json
.codex/: hooks.json
.cursor/: hooks.json
.github/hooks/: Mari.json  mari.json
.mari/: config.json
.mari/assoc/: index.json
.mari/assoc/lance/__manifest/_transactions/: 0-830c25c9-a5a8-4b6a-964a-9fb026403ec2.txn
.mari/assoc/lance/chunks.lance/_transactions/: 0-b364c457-5925-4d56-80c4-a9e55160bea6.txn
cli/engine/: assets.mjs  assoc-lance.mjs  assoc.mjs  comments.mjs  config-write.mjs  config.mjs  decompose.mjs  detect-strings.mjs  examples.mjs  findings.mjs  grammar.mjs  grounding.mjs  i18n.mjs  index.mjs  lexicons.mjs  lineage.mjs  platforms.mjs  readability.mjs  rule-helpers.mjs  rules-discover.mjs  rules-extra.mjs  rules-vale.mjs  rules.mjs  score.mjs  segment.mjs  site.mjs  surface.mjs  symbols.mjs
cli/engine/ml/: index.mjs
fixtures/: hook-test.md  sloppy.md
ml/: mari_ml.py  requirements.txt
native/attn/: .gitignore  CMakeLists.txt  README.md  SPEC.md  bundle.sh  main.cpp  mari_attn.cpp
skill/: SKILL.src.md
skill/reference/: adapt.md  asset-adr.md  asset-code-of-conduct.md  asset-contributing.md  asset-governance.md  asset-postmortem.md  asset-rfc.md  asset-runbook.md  asset-security.md  audit.md  cadence.md  clarify.md  critique.md  delight.md  deslop.md  docsite.md  document.md  draft.md  factcheck.md  format.md  glossary.md  harden.md  init.md  lineage.md  live.md  localize.md  outline.md  platform.md  polish.md  register-docs.md  register-editorial.md  register-marketing.md  register-microcopy.md  sharpen.md  soften.md  tighten.md  voice.md
skill/scripts/: context.mjs  detect.mjs  hook-before-edit.mjs  hook-lib.mjs  hook.mjs
test/: all.mjs  assets.mjs  assoc.mjs  cases.mjs  grammar.mjs  grounding.mjs  hooks.mjs  i18n.mjs  integration.mjs  lineage.mjs  models.mjs  platforms.mjs  run.mjs  site.mjs  strings.mjs  surface.mjs
test/i18n-fixtures/dir/docs/fr/: z.md
test/i18n-fixtures/docu/i18n/de/docusaurus-plugin-content-docs/current/: intro.md
test/i18n-fixtures/suffix/: README.es.md
todo/: 01-skills.md  02-detector-rules.md  03-research.md  04-ml-layer.md  05-grounding.md  06-rule-packs.md  07-hooks-claude.md  08-mvp.md  09-review-findings.md  README.md
